--- a/TP2 Y NT2/proyecto integrador NT2/TP-Final-wnode-main/package.json
+++ b/TP2 Y NT2/proyecto integrador NT2/TP-Final-wnode-main/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.17.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.0.1"
   }
 }
